--- a/_teaching/ECON4130.md
+++ b/_teaching/ECON4130.md
@@ -9,9 +9,9 @@ location: "Hong Kong"
 ---
 
 * Materials designed
-  - Assignments
-    [Assignment 1 - Getting To Know Our Faculty](/files/CUHK_assignments/ECON4130_Assignment1.html)
-    [Assignment 2 - PM2.5 Concentration in Beijing](/files/CUHK_assignments/ECON4130_Assignment2.html)
-    [Assignment 3 - Trading $TSLA with @elonmusk](/files/CUHK_assignments/ECON4130_Assignment3.html)
-  - Extra lecture on Chinese Natural Language Processing
+  - Assignments <br>
+    [Assignment 1 - Getting To Know Our Faculty](/files/CUHK_assignments/ECON4130_Assignment1.html) <br>
+    [Assignment 2 - PM2.5 Concentration in Beijing](/files/CUHK_assignments/ECON4130_Assignment2.html) <br>
+    [Assignment 3 - Trading $TSLA with @elonmusk](/files/CUHK_assignments/ECON4130_Assignment3.html) <br>
+  - Extra lecture on Chinese Natural Language Processing <br>
     [NLP in Chinese](/files/CUHK_assignments/ECON4130_NLP_in_Chinese.html)
