--- a/_teaching/ECON4130.md
+++ b/_teaching/ECON4130.md
@@ -8,10 +8,11 @@ date: 2021-01-01
 location: "Hong Kong"
 ---
 
-* Materials designed
-  - Assignments <br>
+Materials designed
+======
+- Assignments <br>
     [Assignment 1 - Getting To Know Our Faculty](/files/CUHK_TA/ECON4130_Assignment1.html) <br>
     [Assignment 2 - PM2.5 Concentration in Beijing](/files/CUHK_TA/ECON4130_Assignment2.html) <br>
     [Assignment 3 - Trading $TSLA with @elonmusk](/files/CUHK_TA/ECON4130_Assignment3.html) <br>
-  - Extra lecture on Chinese Natural Language Processing <br>
+- Extra lecture on Chinese Natural Language Processing <br>
     [NLP in Chinese](/files/CUHK_TA/ECON4130_NLP_in_Chinese.html)
