--- a/_teaching/ECON4130.md
+++ b/_teaching/ECON4130.md
@@ -8,7 +8,7 @@ date: 2021-01-01
 location: "Hong Kong"
 ---
 
-This is a description of a teaching experience. You can use markdown like any other post.
+[Assignments](/teaching/ECON4130) and [Extra Lecture](/teaching/ECON4130) designed.
 
 Materials designed
 ======
